# ILab

./: README.md
Balanced_set/: CMakeLists.txt  main.cpp
Balanced_set/Common_libs/: CMakeLists.txt  errors.hpp  iterators.hpp  safe_ops.h  time.cpp  time.hpp
Balanced_set/Libraries/: CMakeLists.txt  base_data.cpp  base_data.hpp
Balanced_set/Test/: test.cpp
Binary_Heap/: CMakeLists.txt  main.cpp
Binary_Heap/Libraries/: CMakeLists.txt  Tree.hpp
Binary_Heap/Tests/: CMakeLists.txt  tests.cpp  tests.hpp
Bitcoin/: CMakeLists.txt  gtests.cpp  main.cpp
Bitcoin/Libs/: Random.hpp
Bitcoin/Libs/Logging/: Logging.hpp
Bitcoin/sha256/: CMakeLists.txt  MySycl.hpp  Prime.hpp  sha256.cpp  sha256.hpp
Cmake_Packages/: README.md
Cmake_Packages/example_use/: CMakeLists.txt  main.cpp
Cmake_Packages/lib/: CMakeLists.txt  Foo.cpp  Foo.hpp  FooConfig.cmake
Errors/: CMakeLists.txt  Errors.cpp  Errors_DEFINES.hpp  Examples.cpp  Logging.cpp  LoggingConfig.cmake  Makefile  README.md
Errors/Examples/: Examples1.cpp  Examples2.cpp  Examples3.cpp
Errors/Logging/: CMakeLists.txt  Logging_DEFINES.hpp
Geometry/: Array2D.h  CMakeLists.txt  a.out  main.cpp  tests.cpp
Geometry/Base/: Geometry.hpp  Point.hpp  Surface.hpp  Triangle.hpp  Vector.hpp
Geometry/Common_libs/: Errors.hpp
Geometry/OLD/: Array2D.h  Geometry.h
Geometry/tmp/: a.out  main.cpp
Graph/: CMakeLists.txt  README.md  Tests.cpp  main.cpp
Graph/Common_libs/Errors/: Errors.cpp  Errors.hpp
Graph/Common_libs/Iterators/: Errors.cpp
Graph/KGraph/: CMakeLists.txt  KGraph.cpp  KGraph.dec  KGraph.hpp  KGraphClasses.hpp  KGraphIterator.hpp
Graph/TEST_MAIN/: -1.txt  -3.txt  0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  5_check.txt  6.txt  7.txt  8.txt  9.txt  CMakeLists.txt  a.out  check_tests.cpp  create_tests.cpp
Intersection/: README.md  Triangle.h  main.cpp
LFU_Cache/: Cache.h  InputRandomTests.txt  Input_Tests.txt  OutputRandomTests.txt  OutputRandomTests_map.txt  Output_Tests.txt  README.md  Source.cpp
LLVM/: CMakeLists.txt
Language/: CMakeLists.txt  README.md  main.cpp
Language/Common_libs/: errors.hpp  random.cpp
Language/Common_libs/Errors/: Errors.hpp
Language/Grammar/: CMakeLists.txt  parser.cpp  parser.hpp  parser.tab.cc  parser.tab.hh  parser.y
Language/Lexer/: lex.yy.cc  scanner.l
Language/Node/: CMakeLists.txt  INode.hpp  Node.cpp  Node.hpp  Symtab.cpp  Symtab.hpp
Language/Tests/: 1.txt  2.txt  3.txt  main  make
Matrix/: CMakeLists.txt  main.cpp  tests.cpp
Matrix/Common_libs/: safe_ops.c  safe_ops.h
Matrix/Libraries/: Buffer.hpp  Matrix.cpp  Matrix.hpp  Matrix_Class.hpp
OpenCL/: BSort.cl  CMakeLists.txt  main.cpp  tests.cpp
OpenCL/BSort/: BSort.cl  BSort.cpp  BSort.hpp  CMakeLists.txt
OpenCL/Common_libs/: Color.hpp
OpenCL/Common_libs/Errors/: Errors.hpp
OpenCL/Common_libs/Iterators/: CMakeLists.txt  Errors.hpp
OpenCL/Common_libs/Random/: Random.cpp  Random.hpp
OpenCL/Common_libs/Time/: CMakeLists.txt
OpenCL/TESTS/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  test_checking.cpp  tests_creater.cpp
OpenCL_BitSort/: CMakeLists.txt  README.md  main.cpp
OpenCL_BitSort/BSort/: BSort.cpp  BSort.hpp
OpenCL_BitSort/Common_libs/: Arrays.hpp
OpenCL_BitSort/Common_libs/Random/: Random.cpp
OpenCL_BitSort/Common_libs/Time/: CMakeLists.txt  Time.hpp
OpenCL_BitSort/TESTS/: test_checking.cpp
OpenCL_Math/: CMakeLists.txt  README.md  main.cpp  test.cpp
OpenCL_Math/Libs/: Table.hpp
OpenCL_Math/Libs/Errors/: Errors.hpp  a.out
OpenCL_Math/Libs/Errors_C/: log.h
OpenCL_Math/MC_OpenCL/: MC_OpenCL.cpp  MC_OpenCL.hpp
OpenCL_Math/TESTS/: 2.txt  3.txt
OpenCL_Math/geometry/: Matrix.hpp  dirichle.cl  geometry.cpp  geometry.hpp
OpenCL_Math/matrix/: Matrix.h  Matrix.inl
OpenCL_Strings/: CMakeLists.txt  README.md  a.out  comparing.cpp  comparing_part.cpp  generating_tests.cpp  main.cpp  tmp.cpp
OpenCL_Strings/BSort/: BSort.cpp  BSort.hpp
OpenCL_Strings/Common_libs/: Time.hpp
OpenCL_Strings/Common_libs/Time/: Time.cpp
OpenCL_Strings/MC_OpenCL/: CMakeLists.txt  MC_OpenCL.cpp  MC_OpenCL.hpp
OpenCL_Strings/MarkAlg/: CMakeLists.txt  Mark.cl  MarkAlg.cpp  MarkAlg.hpp
OpenCL_Strings/NativeAlg/: CMakeLists.txt  NativeAlg.cpp  NativeAlg.hpp
OpenCL_Strings/NativeAlg_GPU/: CMakeLists.txt  NativeAlg_GPU.cl  NativeAlg_GPU.cpp  NativeAlg_GPU.hpp
OpenCL_Strings/RabKar/: CMakeLists.txt  Hash_RabKar.cpp  Hash_RabKar.hpp  RabKar.cl  RabKar.cpp  RabKar.hpp
OpenCL_Strings/TESTS/: -1.txt  0.txt  1.txt  2.txt  4.txt  5.txt  6.txt  7.txt  _1.txt
SYCL/: README.md
SYCL/BitSort/: CMakeLists.txt  README.md  main.cpp
SYCL/BitSort/BSort/: BSort.cpp  BSort.hpp  CMakeLists.txt
SYCL/BitSort/Common_libs/: Iterators.hpp
SYCL/BitSort/MySycl/: MySycl.hpp
SYCL/BitSort/TESTS/: test_checking.cpp
SYCL/CheckSycl/: main.cpp
SYCL/Math/: CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
SYCL/Math/Libs/: Color.hpp
SYCL/Math/Libs/Errors_C/: log.c
SYCL/Math/Libs/Logging/: CMakeLists.txt
SYCL/Math/MySycl/: CMakeLists.txt
SYCL/Math/TESTS/: 4.txt  5.txt
SYCL/Math/geometry/: CMakeLists.txt  Matrix.hpp  geometry.cpp  geometry.hpp
SYCL/Math/matrix/: MatrixBuff.h
SYCL/Strings/: CMakeLists.txt  README.md  comparing.cpp  generating_tests.cpp  main.cpp
SYCL/Strings/Common_libs/: Table.hpp
SYCL/Strings/MySycl/: MySycl.cpp  MySycl.hpp
SYCL/Strings/NativeAlg/: NativeAlg.cpp  NativeAlg.hpp
SYCL/Strings/RabKar/: Hash_RabKar.cpp  Hash_RabKar.hpp  RabKar.cpp  RabKar.hpp  kernel.hpp
SYCL/Strings/TESTS/: 0.txt  1.txt  2.txt  3.txt
tmp/: a.out  main.cpp  main2.cpp
